# sf_ocr

./: .gitignore  .python-version  Dockerfile  Makefile  README.md  config.py  config.yaml  db.py  extractor.py  extractor_test.py  hog_classifier.py  img_utils.py  inst.sh  lock.py  makefile  ocr.py  ocr_ds.py  ocr_metric.py  ocr_test.csv  pdf_splitter.py  pdf_test.py  pdf_utils.py  pyproject.toml  requirements.txt  run.sh  server.py  server_test.py  splitter_test.py  test.bat  test.ipynb
src/sf_ocr/: __init__.py
