[project]
name = "sf-ocr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "r.bukin", email = "r.bukin@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.6",
    "opencv-python>=4.10.0.84",
    "pymupdf>=1.26.5",
    "loguru>=0.7.3",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "scikit-image>=0.25.0",
    "aiofiles>=24.1.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0"
]

readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "sf_ocr:hello"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sf_ocr"]
